wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
    # deployment distribution
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: sjleeacr.azurecr.io/wordpress:v1
          name: wordpress
          ports:
          - containerPort: 80
            name: wordpress
            # wordpress wp-config.php
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
              # hpa resource
          volumeMounts:
            - name: volume # azurefile -> type: volume / azuredisk -> type: volume
              mountPath: /var/www/html
              # pvc mount
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: sjlee-pvc # PVC name

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: wordpress
