wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    #appgw.ingress.kubernetes.io/use-regex: "true"
    #appgw.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - www.phl730.pw
    secretName: wordpress-tls
  rules:
  - host: www.phl730.pw
  - http:
      paths:
      - path: /
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
        pathType: Prefix
